# rnJsiJniExamples

./: .gitignore  App.js  JavaExamples.js  JavaJSIExamples.js  KotlinExamples.js  KotlinJsiExamples.js  README.md  app.json  components.js  package.json
android/: build.gradle  settings.gradle
android/app/: CMakeLists.txt  _BUCK  build.gradle  helpers.cpp  java-jsi.cpp  kotlin-jsi.cpp
android/app/src/debug/java/com/rnjsijniexamples/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rnjsijniexamples/: JavaTest.java  JavaTestJsiPackage.java  JavaTestModule.java  JavaTestPackage.java  KotlinTest.kt  KotlinTestJsiPackage.kt  KotlinTestModule.kt  KotlinTestPackage.kt  MainActivity.java  MainApplication.java
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/rnJsiJniExamples/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/rnJsiJniExamples.xcodeproj/: project.pbxproj
ios/rnJsiJniExamples.xcodeproj/xcshareddata/xcschemes/: rnJsiJniExamples.xcscheme
ios/rnJsiJniExamplesTests/: rnJsiJniExamplesTests.m
